--- a/res/layout/activity_image_select.xml
+++ b/res/layout/activity_image_select.xml
@@ -5,12 +5,20 @@
     android:orientation="vertical"
     tools:context=".ImageSelectActivity" >
 
+    <FrameLayout
+        android:id="@+id/camera_preview"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:visibility="gone" />
+
     <ImageView
         android:id="@+id/image"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:background="@color/abs__background_holo_dark" />
+        android:background="@color/abs__background_holo_dark"
+        android:visibility="gone" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -18,16 +26,29 @@
 
         <Button
             android:id="@+id/cancel"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="wrap_content"
             android:text="cancel" >
         </Button>
 
         <Button
-            android:id="@+id/ok"
-            android:layout_width="wrap_content"
+            android:id="@+id/capture"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:text="send" >
+            android:text="capture" 
+            android:visibility="gone">
+        </Button>
+
+        <Button
+            android:id="@+id/send"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:text="send" 
+            android:enabled="false"
+            >
         </Button>
     </LinearLayout>
 
