--- a/res/layout/activity_image_select.xml
+++ b/res/layout/activity_image_select.xml
@@ -20,6 +20,35 @@
         android:background="@color/abs__background_holo_dark"
         android:visibility="gone" />
 
+    <FrameLayout
+        android:id="@+id/progressBar"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:background="@android:color/black"
+        android:visibility="gone" >
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:orientation="horizontal" >
+
+            <ProgressBar
+                style="@android:style/Widget.ProgressBar.Small"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginRight="5dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/camera_init"
+                android:textColor="@android:color/white" />
+        </LinearLayout>
+    </FrameLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
@@ -27,28 +56,27 @@
         <Button
             android:id="@+id/cancel"
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:text="cancel" >
         </Button>
 
         <Button
             android:id="@+id/capture"
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:text="capture" 
-            android:visibility="gone">
+            android:layout_weight="1"
+            android:text="capture"
+            android:visibility="gone" >
         </Button>
 
         <Button
             android:id="@+id/send"
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:text="send" 
+            android:layout_weight="1"
             android:enabled="false"
-            >
+            android:text="send" >
         </Button>
     </LinearLayout>
 
