--- a/res/layout/message_list_item_them.xml
+++ b/res/layout/message_list_item_them.xml
@@ -46,7 +46,7 @@
             android:layout_marginBottom="2dp"
             android:layout_marginLeft="2dp"
             android:layout_marginRight="55dp"
-
+            android:autoLink="all"
             android:textSize="16sp"
             android:visibility="gone" >
         </TextView>
