--- a/res/layout/message_list_item_us.xml
+++ b/res/layout/message_list_item_us.xml
@@ -41,7 +41,7 @@
         <TextView
             android:id="@+id/messageTime"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"            
+            android:layout_height="wrap_content"
             android:layout_marginLeft="2dp"
             android:layout_marginRight="2dp"
             android:layout_marginTop="2dp"
@@ -54,7 +54,8 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="2dp"
             android:layout_marginLeft="2dp"
-            android:layout_marginRight="55dp"            
+            android:layout_marginRight="55dp"
+            android:autoLink="all"
             android:textSize="16sp"
             android:visibility="gone" />
 
@@ -64,7 +65,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="2dp"
             android:layout_marginLeft="2dp"
-            android:layout_marginRight="2sp"            
+            android:layout_marginRight="2sp"
             android:adjustViewBounds="true"
             android:visibility="gone" />
     </LinearLayout>
