only compress image on send after image capture string cleanup fix import spinner fix send image from gallery fix startup intents use pipe streams for image scaling

--- a/res/layout/activity_friend.xml
+++ b/res/layout/activity_friend.xml
@@ -36,25 +36,25 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:text="Welcome to surespot. Messages sent using this software are end to end encrypted using 256 bit AES and 512+ bit ECC key exchange. Enjoy." />
+            android:text="@string/welcome_to_surespot" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:text="No friends...yet. Invite friends by entering their username and touching &apos;invite friend&apos;." />
+            android:text="@string/no_friends" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:text="Navigate between chat tabs by swiping." />
+            android:text="@string/navigate_between_chat_tabs" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:text="This is early pre-beta software, your logins and encrypted conversatations can and probably will be erased at any time. If this happens you will need to &apos;Clear data&apos; for the surespot application in your phone and create a new user." />
+            android:text="@string/early_pre_beta" />
     </LinearLayout>
 
     <LinearLayout
