--- a/res/menu/activity_friend.xml
+++ b/res/menu/activity_friend.xml
@@ -4,12 +4,12 @@
         android:id="@+id/menu_logout"
         android:orderInCategory="400"
         android:showAsAction="never"
-        android:title="logout"/>
+        android:title="@string/logout"/>
     <item
         android:id="@+id/menu_settings"
         android:icon="@drawable/ic_menu_preferences"
         android:orderInCategory="200"
         android:showAsAction="ifRoom|withText"
-        android:title="settings"/>
+        android:title="@string/settings"/>
 
 </menu>
