--- a/res/layout/message_list_item_us.xml
+++ b/res/layout/message_list_item_us.xml
@@ -45,6 +45,7 @@
             android:layout_marginLeft="2dp"
             android:layout_marginRight="2dp"
             android:layout_marginTop="2dp"
+            android:textColor="@android:color/black"
             android:textSize="12sp"
             android:visibility="visible" />
 
@@ -56,6 +57,7 @@
             android:layout_marginLeft="2dp"
             android:layout_marginRight="55dp"
             android:autoLink="all"
+            android:textColor="@android:color/black"
             android:textSize="16sp"
             android:visibility="gone" />
 
