--- a/res/menu/activity_login.xml
+++ b/res/menu/activity_login.xml
@@ -1,10 +1,37 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
-        android:id="@+id/menu_import_identities"
-        android:icon="@drawable/ic_menu_preferences"
+        android:icon="@drawable/ic_menu_overflow"
+        android:orderInCategory="100"
+        android:showAsAction="always">
+        <menu>
+            <item
+                android:id="@+id/menu_create_identity"
+                android:icon="@drawable/ic_menu_add"
+                android:orderInCategory="100"
+                android:title="@string/create_identity_label"
+                android:titleCondensed="create"/>
+            <item
+                android:id="@+id/menu_import_identities"
+                android:icon="@drawable/ic_menu_archive"
+                android:orderInCategory="200"
+                android:title="@string/import_identities"
+                android:titleCondensed="import"/>
+        </menu>
+    </item>
+    <item
+        android:id="@+id/menu_create_identity"
+        android:icon="@drawable/ic_menu_add"
         android:orderInCategory="200"
-        android:showAsAction="ifRoom|withText"
-        android:title="@string/import_identities"/>
+        android:showAsAction="never"
+        android:title="@string/create_identity_label"
+        android:titleCondensed="create"/>
+    <item
+        android:id="@+id/menu_import_identities"
+        android:icon="@drawable/ic_menu_archive"
+        android:orderInCategory="300"
+        android:showAsAction="never"
+        android:title="@string/import_identities"
+        android:titleCondensed="import"/>
 
 </menu>
