--- a/res/layout/chat_fragment.xml
+++ b/res/layout/chat_fragment.xml
@@ -56,6 +56,7 @@
         android:layout_marginBottom="-10sp"
         android:layout_marginRight="-10sp"
         android:background="@drawable/send_button"
-        android:text="send" />
+        android:textColor="@android:color/black"
+        android:text="home" />
 
 </RelativeLayout>
