message activity indicator

--- a/res/layout/main_friend_item.xml
+++ b/res/layout/main_friend_item.xml
@@ -3,37 +3,46 @@
     android:id="@+id/friendItemLayout"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:orientation="horizontal" >
 
     <LinearLayout
         android:id="@+id/statusLayout"
         android:layout_width="0dp"
-        android:minHeight="50dp"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="15dp"
         android:layout_weight="1"
-        android:orientation="vertical" 
-        android:layout_marginLeft="15dp">
+        android:minHeight="50dp"
+        android:orientation="vertical" >
 
         <TextView
             android:id="@+id/friendName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"            
+            android:layout_gravity="center_vertical"
             android:textSize="30sp" >
-
         </TextView>
-         <TextView
+
+        <TextView
             android:id="@+id/friendStatus"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp" 
-            android:layout_gravity="center_vertical"                                              
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="15dp"
             android:textSize="20sp" >
         </TextView>
     </LinearLayout>
 
+    <View
+        android:id="@+id/messageActivity"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_gravity="center"
+        android:layout_marginRight="10dp"
+        android:background="@drawable/filled_blue_circle"
+        android:visibility="gone" >
+    </View>
+
     <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/inviteLayout"
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
