put scroll mode back to normal

--- a/res/layout/chat_fragment.xml
+++ b/res/layout/chat_fragment.xml
@@ -11,7 +11,7 @@
         android:layout_above="@+id/etMessage"
         android:drawSelectorOnTop="false"
         android:stackFromBottom="true"
-        android:transcriptMode="alwaysScroll" /> 
+        android:transcriptMode="normal" /> 
 
     <FrameLayout
         android:id="@+id/progressBar"
