--- a/res/layout/chat_fragment.xml
+++ b/res/layout/chat_fragment.xml
@@ -11,7 +11,7 @@
         android:layout_above="@+id/etMessage"
         android:drawSelectorOnTop="false"
         android:stackFromBottom="true"
-        android:transcriptMode="normal" /> 
+        android:transcriptMode="normal" />
 
     <FrameLayout
         android:id="@+id/progressBar"
@@ -56,7 +56,7 @@
         android:layout_marginBottom="-10sp"
         android:layout_marginRight="-10sp"
         android:background="@drawable/send_button"
-        android:textColor="@android:color/black"
-        android:text="@string/home" />
+        android:text="@string/home"
+        android:textColor="@android:color/black" />
 
 </RelativeLayout>
