--- a/res/menu/activity_login.xml
+++ b/res/menu/activity_login.xml
@@ -6,13 +6,13 @@
         android:showAsAction="always">
         <menu>
             <item
-                android:id="@+id/menu_create_identity"
+                android:id="@+id/menu_create_identity_bar"
                 android:icon="@drawable/ic_menu_add"
                 android:orderInCategory="100"
                 android:title="@string/create_identity_label"
                 android:titleCondensed="create"/>
             <item
-                android:id="@+id/menu_import_identities"
+                android:id="@+id/menu_import_identities_bar"
                 android:icon="@drawable/ic_menu_archive"
                 android:orderInCategory="200"
                 android:title="@string/import_identities"
@@ -33,5 +33,11 @@
         android:showAsAction="never"
         android:title="@string/import_identities"
         android:titleCondensed="import"/>
+    <item
+        android:id="@+id/clear_local_cache"
+        android:icon="@drawable/ic_menu_archive"
+        android:orderInCategory="400"
+        android:showAsAction="never"
+        android:title="clear local cache"/>
 
 </menu>
