--- a/res/layout/chat_fragment.xml
+++ b/res/layout/chat_fragment.xml
@@ -37,12 +37,13 @@
 
     <EditText
         android:id="@+id/etMessage"
-        android:layout_width="0dp"
+        android:layout_width="0dp"        
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_toLeftOf="@+id/bSend"
-        android:imeOptions="actionSend"
+        android:imeOptions="flagNoExtractUi|actionSend"
+        android:inputType="text"
         android:maxHeight="150sp"
         android:minHeight="45sp" >
     </EditText>
