set friend invite text size

--- a/res/layout/friend_fragment.xml
+++ b/res/layout/friend_fragment.xml
@@ -106,8 +106,9 @@
         android:layout_alignParentLeft="true"
         android:layout_toLeftOf="@+id/bAddFriend"
         android:imeOptions="flagNoExtractUi|actionDone"
-		android:inputType="textNoSuggestions"
-        android:singleLine="true" />
+        android:inputType="textNoSuggestions"
+        android:singleLine="true"
+        android:textSize="20sp" />
 
     <Button
         android:id="@+id/bAddFriend"
