--- a/res/layout/message_list_item_them.xml
+++ b/res/layout/message_list_item_them.xml
@@ -3,7 +3,8 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:gravity="left"
-    android:orientation="horizontal" >
+    android:orientation="horizontal" 
+    android:descendantFocusability="blocksDescendants">
 
     <!-- <TextView -->
     <!-- android:id="@+id/messageUser" -->
