--- a/res/layout/activity_image_select.xml
+++ b/res/layout/activity_image_select.xml
@@ -5,46 +5,12 @@
     android:background="@color/abs__background_holo_dark"
     tools:context=".ImageSelectActivity" >
 
-    <FrameLayout
-        android:id="@+id/camera_preview"
+    <it.sephiroth.android.library.imagezoom.ImageViewTouch
+        android:id="@+id/imageViewer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/buttonFrame"
-        android:visibility="gone" />
-
-    <ImageView
-        android:id="@+id/image"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/buttonFrame"
-        android:visibility="gone" />
-
-    <FrameLayout
-        android:id="@+id/progressBar"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="gone" >
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:orientation="horizontal" >
-
-            <ProgressBar
-                style="@android:style/Widget.ProgressBar.Small"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginRight="5dp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/camera_init"
-                android:textColor="@android:color/white" />
-        </LinearLayout>
-    </FrameLayout>
+        android:background="@color/abs__background_holo_dark" />
 
     <LinearLayout
         android:id="@+id/buttonFrame"
@@ -59,15 +25,6 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="cancel" >
-        </Button>
-
-        <Button
-            android:id="@+id/capture"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="capture"
-            android:visibility="gone" >
         </Button>
 
         <Button
