fix multi line text entry scroll to end on new messages

--- a/res/layout/friend_fragment.xml
+++ b/res/layout/friend_fragment.xml
@@ -106,6 +106,7 @@
         android:layout_alignParentLeft="true"
         android:layout_toLeftOf="@+id/bAddFriend"
         android:imeOptions="flagNoExtractUi|actionDone"
+        android:imeActionLabel="invite"
         android:inputType="textNoSuggestions"
         android:singleLine="true"
         android:textSize="20sp" />
