--- a/res/layout/chat_fragment.xml
+++ b/res/layout/chat_fragment.xml
@@ -42,8 +42,8 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_toLeftOf="@+id/bSend"
-        android:imeOptions="flagNoExtractUi|actionSend"
-        android:inputType="text"
+        android:imeOptions="flagNoExtractUi"
+        android:inputType="textMultiLine"
         android:maxHeight="150sp"
         android:minHeight="45sp" >
     </EditText>
